--- a/front/login/visualcadastro.css
+++ b/front/login/visualcadastro.css
@@ -1,7 +1,7 @@
 a {
     color: black;
+    text-align: center;
 }
-
 a:hover {
     color: white;
 }
@@ -35,3 +35,5 @@ input[type="number"]::-webkit-inner-spin-button,
 .sombra {
     box-shadow: 0px 0px 10px gray;
 }
+
+
