--- a/front/visual.css
+++ b/front/visual.css
@@ -1,11 +1,31 @@
+/* ----------
+Categorias
+----------*/
+.list-group {
+    width: 190px;
+    float: left;
+    margin: 10px;
+    font-size: 14px;
+    text-align: center;
+}
+
+.list-group a {
+   padding: 5px;
+}
+
+/* ----------
+Tela Principal
+----------*/
+.centro {
+    min-width: 500px;
+    max-width: 900px;
+    width: 900px;
+    margin: 0 auto;
+}
+
 .card-columns {
     width: auto;
     padding: 10px;
-}
-
-.centro {
-    width: 900px;
-    margin: 0 auto;
 }
 
 .card-img-top {
