--- a/front/login/visualcadastro.css
+++ b/front/login/visualcadastro.css
@@ -1,24 +1,25 @@
-a {
-    color: black;
-    text-align: center;
-}
-a:hover {
-    color: white;
-}
-
 .cad {
     background: gray;
-    justify-content: center;
     width: 500px;
     margin: 100px auto;
     text-align: center;
     border: 2px solid black;
     border-radius: 5px;
+    box-shadow: 0px 0px 10px gray;
 }
 
 .cad form {
-    height: 400px;
+    height: 350px;
     justify-content: center;
+}
+
+.pad {
+    padding-right: 240px;
+}
+
+.btn {
+    padding-right: 90px;
+    padding-left: 90px;
 }
 
 input[type="number"]::-webkit-inner-spin-button, 
@@ -27,13 +28,10 @@ input[type="number"]::-webkit-inner-spin-button,
     margin: 0;
 }    
 
-.pad {
-    padding-right: 240px;
+a {
+    color: black;
 }
 
-
-.sombra {
-    box-shadow: 0px 0px 10px gray;
+a:hover {
+    color: white;
 }
-
-
