--- a/home/templates/home/homepage.html
+++ b/home/templates/home/homepage.html
@@ -1,30 +1,117 @@
 {% extends 'base.html' %}
 
 {%block 'conteudo'%}
-<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+  <!-- Optional JavaScript; choose one of the two! -->
+
+  <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
+    crossorigin="anonymous"></script>
+
+  <!-- Option 2: Separate Popper and Bootstrap JS -->
+  <!--
+      <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
+    -->
+
+  <!--Barra de navegação-->
+  <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
     <!--Logo-->
-    <a class="navbar-brand" href="">Tenno</a>
+    <a class="navbar-brand" href="index.html">Tenno</a>
 
     <!--Menu Amburguer-->
     <button class="navbar-toggler" data-toggle="collapse" data-target="#nav-opcoes1">
-        <span class="navbar-toggler-icon"></span>
+      <span class="navbar-toggler-icon"></span>
     </button>
 
     <!--Navegação-->
     <div class="collapse navbar-collapse" id="nav-opcoes1">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item"><a class="nav-link" href="">Home</a></li>
-            <li class="nav-item"><a class="nav-link" href="">Contato</a></li>
-            <li class="nav-item"><a class="nav-link" href="">Sobre</a></li>
-        </ul>
-        <!--Pesquisa-->
-        <form class="form-inline" action="">
-            <input class="form-control" placeholder="Pesquisar..." type="text">
-            <button class="btn btn-outline-light">Pesquisar</button>
-            <span class="pl-2"></span>
-            <button class="btn btn-dark btn-sm">Cadastrar</button>
-            <button class="btn btn-dark btn-sm">Login</button>
-        </form>
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="">Contato</a></li>
+        <li class="nav-item"><a class="nav-link" href="">Sobre</a></li>
+      </ul>
+      <!--Pesquisa-->
+      <form class="form-inline" action="">
+        <input class="form-control" placeholder="Pesquisar..." type="text">
+        <button class="btn btn-outline-light">Pesquisar</button>
+        <span class="pl-2"></span>
+        <button class="btn btn-dark btn-sm"><a href="http://127.0.0.1:8000/login/">Login</a></button>
+      </form>
     </div>
-</nav>
+  </nav>
+
+  <!--Categorias-->
+  <div class="list-group">
+    <a class="list-group-item list-group-item-dark list-group-item-action active" href="index.html">Todas as
+      Categorias</a>
+    <a class="list-group-item list-group-item-dark list-group-item-action" href="categorias/imoveis.html">Imóveis</a>
+    <a class="list-group-item list-group-item-dark list-group-item-action"
+      href="categorias/eletronicos.html">Eletrônicos</a>
+    <a class="list-group-item list-group-item-dark list-group-item-action" href="categorias/servicos.html">Serviços</a>
+    <a class="list-group-item list-group-item-dark list-group-item-action" href="categorias/esporte.html">Esporte</a>
+  </div>
+
+  <!--Tela Principal-->
+  <div class="centro">
+    <div class="card-columns">
+      <div class="card">
+        <img class="card-img-top" src="https://source.unsplash.com/random/900x400" alt="">
+        <div class="card-body">
+          <h4 class="card-title">Produto</h4>
+          <h6 style="margin-bottom: 10px;" class="card-subtitle">R$ 600</h6>
+          <a class="btn btn-dark" href="">Acessar</a>
+        </div>
+      </div>
+
+      <div class="card">
+        <img class="card-img-top" src="https://source.unsplash.com/random/900x400" alt="">
+        <div class="card-body">
+          <h4 class="card-title">Produto</h4>
+          <h6 style="margin-bottom: 10px;" class="card-subtitle">R$ 600</h6>
+          <a class="btn btn-dark" href="">Acessar</a>
+        </div>
+      </div>
+
+      <div class="card">
+        <img class="card-img-top" src="https://source.unsplash.com/random/900x400" alt="">
+        <div class="card-body">
+          <h4 class="card-title">Produto</h4>
+          <h6 style="margin-bottom: 10px;" class="card-subtitle">R$ 600</h6>
+          <a class="btn btn-dark" href="">Acessar</a>
+        </div>
+      </div>
+
+      <div class="card">
+        <img class="card-img-top" src="https://source.unsplash.com/random/900x400" alt="">
+        <div class="card-body">
+          <h4 class="card-title">Produto</h4>
+          <h6 style="margin-bottom: 10px;" class="card-subtitle">R$ 600</h6>
+          <a class="btn btn-dark" href="">Acessar</a>
+        </div>
+      </div>
+
+      <div class="card">
+        <img class="card-img-top" src="https://source.unsplash.com/random/900x400" alt="">
+        <div class="card-body">
+          <h4 class="card-title">Produto</h4>
+          <h6 style="margin-bottom: 10px;" class="card-subtitle">R$ 600</h6>
+          <a class="btn btn-dark" href="">Acessar</a>
+        </div>
+      </div>
+
+      <div class="card">
+        <img class="card-img-top" src="https://source.unsplash.com/random/900x400" alt="">
+        <div class="card-body">
+          <h4 class="card-title">Produto</h4>
+          <h6 style="margin-bottom: 10px;" class="card-subtitle">R$ 600</h6>
+          <a class="btn btn-dark" href="">Acessar</a>
+        </div>
+      </div>
+    </div>
+  </div>
 {%endblock%}
