--- a/home/templates/login/loginpage.html
+++ b/home/templates/login/loginpage.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %} 
-
+{% load static %}
+{%block 'liks'%}<link rel="stylesheet" href="{% static 'css/visualogin.css' %}" />{%endblock%}
 {%block 'conteudo'%}
 <!-- Optional JavaScript; choose one of the two! -->
 
