padronizando titulo e css

--- a/home/templates/home/homepage.html
+++ b/home/templates/home/homepage.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{%block 'titulo'%}Home{%endblock %}
 {%block 'conteudo'%}
 <!-- Optional JavaScript; choose one of the two! -->
 
@@ -21,7 +21,7 @@
   <!--Barra de navegação-->
   <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
     <!--Logo-->
-    <a class="navbar-brand" href="index.html">Tenno</a>
+    <a class="navbar-brand" href="http://127.0.0.1:8000/">Tenno</a>
 
     <!--Menu Amburguer-->
     <button class="navbar-toggler" data-toggle="collapse" data-target="#nav-opcoes1">
