--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -20,10 +20,10 @@
     <link rel="stylesheet" href="{% static 'css/visual.css' %}" />
     
 
-    <link rel="shortcut icon" type="image/x-icon" href="login/space2.png" />
+    <link rel="shortcut icon" type="image/x-icon" href="{% static 'icons/space2.png' %}" />
     <!--<a href="https://www.flaticon.com/br/icones-gratis/logotipo" title="logotipo ícones">Logotipo ícones criados por Freepik - Flaticon</a>-->
 
-    <title>Home - Tenno</title>
+    <title>{%block 'titulo'%}{%endblock %} - Tenno</title>
   </head>
   <body>
     {%block 'conteudo'%} {%endblock%}
