--- a/home/templates/login/cadastro.html
+++ b/home/templates/login/cadastro.html
@@ -1,21 +1,8 @@
-<!doctype html>
-<html lang="pt-br">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-
-    <link rel="stylesheet" href="visualcadastro.css">
-
-    <link rel="shortcut icon" type="image/x-icon" href="../login/space2.png">
-    <!--<a href="https://www.flaticon.com/br/icones-gratis/logotipo" title="logotipo ícones">Logotipo ícones criados por Freepik - Flaticon</a>-->
-
-    <title>Cadastro - Tenno</title>
-  </head>
-  <body>
+{% extends 'base.html' %} 
+{% load static %}
+{%block 'titulo'%}Cadastro{%endblock %}
+{%block 'liks'%}<link rel="stylesheet" href="{% static 'css/visualcadastro.css' %}" />{%endblock%}
+{%block 'conteudo'%}
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
@@ -30,7 +17,7 @@
     -->
 
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-        <a class="navbar-brand mx-auto" href="/loginpage.html">Tenno</a>
+        <a class="navbar-brand mx-auto" href="http://127.0.0.1:8000/">Tenno</a>
     </nav>
     
     <div class="cad">
@@ -49,8 +36,7 @@
             </div>
             <button class="btn btn-dark">Cadastrar</button>
         </form>
-        <a href="login.html">Já tem uma conta? Clique aqui!</a>
+        <a href="http://127.0.0.1:8000/login/">Já tem uma conta? Clique aqui!</a>
     </div>
     
-  </body>
-</html>
+{%endblock%}
