colocando validadores no cadastro

--- a/home/templates/login/cadastro.html
+++ b/home/templates/login/cadastro.html
@@ -42,7 +42,7 @@
             <div>
                 <input class="form-control pad" 
                 name ="email"
-                value ="{{requesr.POST.email}}"
+                value ="{{request.POST.email}}"
                 type="email" 
                 placeholder="E-mail"
                 maxlength="50">
@@ -56,8 +56,7 @@
                 maxlength="11" 
                 pattern="[0-9]">
                 <input class="form-control" 
-                name ="senha"
-                value ="{{request.POST.senha}}" 
+                name ="senha" 
                 type="password" 
                 placeholder="senha" 
                 maxlength="16">
