--- a/home/templates/login/cadastro.html
+++ b/home/templates/login/cadastro.html
@@ -41,8 +41,8 @@
             </div>
             <div>
                 <input class="form-control mr-2" 
-                name = "nome" 
-                value="{{request.POST.nome}}"
+                name = "usuario" 
+                value="{{request.POST.usuario}}"
                 type="text" 
                 placeholder="Nome de Usuário" 
                 maxlength="20">
@@ -69,7 +69,7 @@
                 placeholder="Senha" 
                 maxlength="16">
                 <input class="form-control" 
-                name ="senha" 
+                name ="senha2" 
                 type="password" 
                 placeholder="Repita a senha" 
                 maxlength="16">
