--- a/home/templates/partial/_mensagens.html
+++ b/home/templates/partial/_mensagens.html
@@ -1,7 +1,7 @@
 {% if messages %}
 <br>
     {% for message in messages %}
-            <div class="alert alert-danger" role="alert">
+            <div class="alert {{message.tags }}" role="alert">
                 {{message}}
             </div>
     {%endfor %}
